--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -180,3 +180,17 @@ input:checked + .slider:before {-webkit-transform: translateX(11px);-ms-transfor
     text-align: right;
     padding-right: 26px;width: 170px;
     color: #FABB2D}
+
+.slWeb{
+	overflow: hidden;
+    overflow-y: scroll;
+    height: auto;
+    width: auto;
+    max-width: 470px;
+    max-height: 65%;
+}
+.inLink{
+	    width: 100%;
+    outline: none;
+    border: 0;
+}
