--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -154,17 +154,15 @@ input:checked + .slider:before {-webkit-transform: translateX(11px);-ms-transfor
 /*Empiza un nuevo css de esta aplicacion*/
 
 .effect7{position:relative;-webkit-box-shadow:0 10px 55px rgba(0, 0, 0, 0.1), 0 0 40px rgba(0, 0, 0, 0.0) inset;-moz-box-shadow:0 10px 55px rgba(0, 0, 0, 0.1), 0 0 40px rgba(0, 0, 0, 0.0) inset;box-shadow:0 10px 55px rgba(0, 0, 0, 0.1), 0 0 40px rgba(0, 0, 0, 0.0) inset;}
-.effect7:before, .effect7:after{content:"";position:absolute;z-index:-1;-webkit-box-shadow:0 0 20px rgba(0,0,0,0.8);-moz-box-shadow:0 0 20px rgba(0,0,0,0.8);box-shadow:0 0 20px rgba(0,0,0,0.8);top:0;bottom:0;left:10px;right:10px;-moz-border-radius:100px / 10px;border-radius:100px / 10px;}
-.effect7:after{right:10px;left:auto;-webkit-transform:skew(8deg) rotate(3deg);-moz-transform:skew(8deg) rotate(3deg);-ms-transform:skew(8deg) rotate(3deg);-o-transform:skew(8deg) rotate(3deg);transform:skew(8deg) rotate(3deg);}
 
-.slCt{display: none;position: absolute;background: white;border: solid;width: auto;list-style-type: none;border-width: 1px;border-color: #ececec;padding: 10px 15px;margin-top: 6px;}
+.slCt{display: none;position: absolute;background: white;border: solid;width: 100%;list-style-type: none;border-width: 1px;border-color: #ececec;padding: 10px 15px;margin-top: 6px;margin-left: -7px;position: absolute;z-index: 2;}
 
 .visible{display: block;}
 .slCt li {padding-top: 5px;font-family: gotham, helvetica, arial, sans-serif;font-size: 12px;cursor: pointer;color: #878787;}
 .slCt li:hover{color:#4688F1}
 .liActive{color:#4688F1!important;}
 
-.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th{font-family: gotham, helvetica, arial, sans-serif;font-size: 13px;color: #878787;    border-bottom: 1px solid #ececec;    padding-top: 6px;padding-bottom: 6px;    border-top: 0px;}
+.table>tbody>tr>td, .table>tbody>tr>th, .table>tfoot>tr>td, .table>tfoot>tr>th, .table>thead>tr>td, .table>thead>tr>th{font-family: gotham, helvetica, arial, sans-serif;height: 32px;font-size: 13px;color: #878787;    border-bottom: 1px solid #ececec;    padding-top: 6px;padding-bottom: 6px;    border-top: 0px;    vertical-align: middle;    padding: 0 9px;}
 .table span{font-family: gotham, helvetica, arial, sans-serif;font-size: 13px;}
 .cabeceraTable{font-family: gotham, helvetica, arial, sans-serif!important;color: #606060!important;font-size: 16px!important;line-height: 28px!important;padding-left: 9px!important;font-weight: 400;}
 .tdCat{cursor: pointer;    min-height: 19px;}
@@ -196,3 +194,16 @@ input:checked + .slider:before {-webkit-transform: translateX(11px);-ms-transfor
 }
 .lf{    color: #4688F1; }
 .lnf{    color: #ea4335;}
+.cTipo{ width: 50px;    text-align: center;}
+.cCateg{width: 210px;max-width: 210px;}
+
+.pr{
+	position: relative;
+}
+.arrow{position: absolute;right: 0;}
+
+
+
+
+
+
