--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -198,6 +198,9 @@ overflow: hidden;overflow-y: scroll;   /* height: auto; */width: 100%;max-width:
 .cCateg{width: 210px;max-width: 210px;}
 .pa{position: absolute;background: white;    z-index: 1;    top: 0;}
 .noti{border: solid;    font-family: 'Lato', sans-serif;    border-width: 1px;    position: absolute;    right: 25px;    top: 36px;    font-size: 11px;    border-color: #ea4335;    color: #ea4335;    text-align: center;    border-radius: 50px;    padding: 1px 6px;background: white;}  
+.notiPos{    border-color: white;
+    right: 15px;
+    top: 30px;}
 .sName{}
 .sViewName{overflow: visible;-webkit-transition: all 7s; /* Safari */transition: all 7s;}
 .rotArrow{transform: rotate(180deg);color: #4688F1!important; transition: all 0.7s;}
