--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -22,7 +22,7 @@
     border-right-width: 1px;
 }*/
 
-*{margin: 0; padding: 0; box-sizing: border-box; font-family: san	sans-serif;}
+*{margin: 0; padding: 0; box-sizing: border-box;     font-family: gotham, helvetica, arial, sans-serif;}
 
 .main{width: 100%; height: 100%;}
 
@@ -244,7 +244,7 @@ overflow: hidden;overflow-y: scroll;   /* height: auto; */width: 100%;max-width:
     right: 23px;
     bottom: 28px;}
 
-
+.pzero{ padding-top: 0px!important;height: 17px;}
 .visible{display: block;}
 
 
