--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -24,6 +24,10 @@
 
 *{margin: 0; padding: 0; box-sizing: border-box;     font-family: gotham, helvetica, arial, sans-serif;}
 
+::after, ::before {
+    box-sizing: content-box!important;
+}
+
 .main{width: 100%; height: 100%;}
 
 .content-menu{ padding-top: 130px;width: 73px;background-color: #f8f8f8; border-right: 1px solid #ececec; height: 100%; float: left; box-sizing: border-box; position: absolute; z-index: 1;}
@@ -86,12 +90,12 @@
 .switch {    position: relative;display: inline-block;width: 28px;height: 18px;}
 .switch input {display:none;}
 
-.slider {position: absolute;cursor: pointer;top: 0;left: 0;right: 0;bottom: 0;-webkit-transition: .4s;transition: .4s;border: 1px solid #e1e1e1;} 
+.slider {position: absolute;cursor: pointer;top: 0;left: 0;right: 0;bottom: 0;-webkit-transition: .4s;transition: .4s;border: 1px solid #e1e1e1;    background: white;} 
 .slider:before {position: absolute;content: "";height: 14px;width: 14px;left: -1px;background-color: #fff;-webkit-transition: .4s;transition: .4s;border: 1px solid #e1e1e1;}
 
-input:checked + .slider {background-color: #e64a89; border: 1px solid #e64a89;}
-input:focus + .slider {box-shadow: 0 0 1px #e64a89;}
-input:checked + .slider:before {-webkit-transform: translateX(11px);-ms-transform: translateX(11px);transform: translateX(11px); border: 1px solid #fff;}
+input:checked + .slider {background-color: #2dbe60; border: 1px solid #2dbe60;}
+input:focus + .slider {box-shadow: 0 0 1px #2dbe60;}
+input:checked + .slider:before {-webkit-transform: translateX(11px);-ms-transform: translateX(11px);transform: translateX(11px); border: 1px solid #fff;box-sizing: content-box;}
 
 /* Rounded sliders */
 .slider.round {border-radius: 34px;}
@@ -290,6 +294,7 @@ overflow: hidden;overflow-y: scroll;   /* height: auto; */width: 100%;max-width:
     cursor: pointer;
 }
     
+.spanRequiere{padding-left: 35px;}
     
     
     
