--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -328,8 +328,86 @@ textarea{color: #878787;}
     overflow-y: scroll;padding-top: 0;}
 .paTem{    position: absolute!important;}
 
+.btnAdd{    position: absolute;
+    right: 0;
+    background: #1090f7;
+    color: white;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-radius: 4px;
+    font-size: 12px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    cursor: pointer;}
+    
+.newSomething{
+	visibility: hidden;
+	border: solid;
+    border-width: 1px;
+    width: calc(100% - 100px);
+    margin-left: 50px;
+    position: absolute;
+    /* width: 100%; */
+    top: 86px;
+    height: 0px;
+    z-index: 3;
+    background: white;
+    border-top: 0px;
+    border-color: #ececec;
+    overflow: hidden;
+    overflow-y: scroll;
+    padding-left: 25px;
+    padding-right: 25px;
+}
+.openNew{
+    visibility: visible;
+    height: 200px;
+    -webkit-transition: height 1s;
+    transition: height 1s;
+}
+.cancelNew{
+	position: absolute;
+	top: 15px;
+    left: 15px;
+    cursor: pointer;
+}
+
+#tNuevaWeb{
+	    position: absolute;
+    width: calc(100% - 50px);
+    top: 56px;
+    table-layout: fixed;
+}
+.guardarNew{
+    position: absolute;
+    right: 32px;
+    bottom: 18px;
+    border: solid;
+    border-width: 1px;
+    padding-left: 15px;
+    padding-right: 15px;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    border-radius: 4px;
+    font-size: 12px;
+    font-variant: small-caps;
+    color: white;
+    border-color: #0f9d58;
+    cursor: pointer;
+    background: #0f9d58;
+}
+.divBlock{
+	display: none;
+    position: absolute;
+    width: calc(100% + 423px);
+    height: 100%;
+    z-index: 1;
+    margin-left: -423px;
+}
+.nuevaWeb{position: fixed;}
+
 /*DANI*/
-#tCategorias{table-layout:fixed}
+#tCategorias{table-layout:fixed;}
 #tCategorias td{white-space: nowrap;overflow: visible;}
 .cCWeb{width: 25%;}/*20%*/
 .cCDR{width: 40px;}
