--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -419,8 +419,35 @@ textarea{color: #878787;}
 .cCReq{width: 10%;}
 .cCFecha{width: 5%;}
 
+.crossReset{position: absolute;
+    font-size: 11px;
+    top: 1px;
+    left: 1px;
+    opacity: 0;}
+.crossReset:hover{
+	opacity: 1;
+}
 
-.visible{display: block;}
+.cPrecio{
+	width: 40px;
+    text-align: center;
+}
+.cBeneficio{width: width: 46px;;}
+.c_incremento{    width: 55px;}
+.pago_web{ width: 15%;}
+.paid_inputs{text-align: center;display:none}
+.open_inputs{display: block;position: absolute;top: 6px;left: 0;}
+input[type="number"] {
+  -webkit-appearance: textfield;
+     -moz-appearance: textfield;
+          appearance: textfield;
+}
+input[type=number]::-webkit-inner-spin-button, 
+input[type=number]::-webkit-outer-spin-button { 
+  -webkit-appearance: none;
+}
+
+.visible{display: block!important;}
 
 
 
