--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -419,6 +419,55 @@ textarea{color: #878787;}
 .cCReq{width: 10%;}
 .cCFecha{width: 5%;}
 
+/*vista clientes*/
+.material-icons.rositaGuay { color: #e64a89; }
+#tCategorias{table-layout:fixed}
+#tCategorias td{white-space: nowrap;overflow: visible;}
+.cCWeb{width: 20%;}
+.cCWebCliente{width: 20%;}
+.cCNombre{width: 28%}
+.cCTipo{width: 100px;}
+.cCDR{width: 40px;}
+.cCDA{width: 40px;}
+.cCTem{width: 13%;}
+
+.cCAnchor{width: 20%}
+.cCDesc{width: 37%;}
+.cCReu{width: 10%;}
+.cCReq{width: 10%;}
+.cCFecha{width: 5%;}
+
+.addForo{background: #e64a89;color: #fff;border: solid;border-radius: 4px;border-color: #e64a89;border-width: 1px;width: 29px;height: 26px;text-align: center;margin-top: 0px;margin-right: 10px;}
+
+.allClientes{display: none;}
+.vistaClientes{background: #fff;position: absolute; width: 100%;height: 100%;}
+
+.slCtNuevo{display: none;position: absolute;background: white;border: solid;width: 100%;list-style-type: none;border-width: 1px;border-color: #ececec;padding: 10px 15px;margin-top: 6px;margin-left: -7px;position: absolute;z-index: 2; border-radius: 10px}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 .crossReset{position: absolute;
     font-size: 11px;
     top: 1px;
