--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -255,7 +255,7 @@ overflow: hidden;overflow-y: scroll;   /* height: auto; */width: 100%;max-width:
     position: absolute;
     top: 115px;
     padding-right: 50px;
-    padding-left: 50px;}
+    padding-left: 50px;z-index: 1;}
     
 .cSave{
 	color: red;
@@ -368,7 +368,7 @@ textarea{color: #878787;}
 .cancelNew{
 	position: absolute;
 	top: 15px;
-    left: 15px;
+    right: 15px;
     cursor: pointer;
 }
 
@@ -398,9 +398,9 @@ textarea{color: #878787;}
     font-size: 12px;
     font-variant: small-caps;
     color: white;
-    border-color: #0f9d58;
+    border-color: #2ebf60;
     cursor: pointer;
-    background: #0f9d58;
+    background: #2ebf60;
 }
 .divBlock{
 	display: none;
@@ -460,10 +460,26 @@ textarea{color: #878787;}
 .cNoFollow input{text-align: center;}
 .anchorC{width: 20%;}
 
-.info{color: #ea4335;position: absolute;bottom: 13px;left: 33px;}
+.infoNew{color: #ea4335;position: absolute;bottom: 13px;left: 33px;}
 .select_client{
 	display: none;
+	    width: 30px;
+    max-width: 30px;
 }
+.div_select_cliente{
+    height: 12px;
+    width: 100%;
+}
+.delete_client{cursor: pointer;
+    margin-left: 4px;
+    position: absolute;
+    height: 27px;
+    width: 27px;
+    padding-left: 2px;
+    padding-top: 2px;}
+.gris{color: #878787;}
+
+.visible_td{display: table-cell;}
 .addForo{background: #e64a89;color: #fff;border: solid;border-radius: 4px;border-color: #e64a89;border-width: 1px;width: 29px;height: 26px;text-align: center;margin-top: 0px;margin-right: 10px;}
 
 .allClientes{display: none;}
@@ -471,6 +487,10 @@ textarea{color: #878787;}
 
 .slCtNuevo{display: none;position: absolute;background: white;border: solid;width: 100%;list-style-type: none;border-width: 1px;border-color: #ececec;padding: 10px 15px;margin-top: 6px;margin-left: -7px;position: absolute;z-index: 2; border-radius: 10px}
 
+.i_cancel{
+	color: #878787;
+	font-size: 20px
+}
 
 
 
@@ -523,8 +543,7 @@ input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
 }
 
-.ckBlog{    position: absolute;
-    top: 7px;}
+.ckBlog{ position: absolute;top: 7px;}
 
 .visible{display: block!important;}
 
