--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -808,8 +808,13 @@ ul{list-style-type: none;margin: 0px!important;}
 .nuevo_destino i {float: right;}
 
 .p_a{position: absolute;}
+.lupa_medios{    
+	right: 25px;
+    font-size: 22px;
+    top: 14px;}
 .p_cicles{    left: 0;top: 8px;}
 .pd_left_30{padding-left: 30px;}
+
 
 .pop_up{top:100%;}
 
@@ -853,6 +858,39 @@ ul{list-style-type: none;margin: 0px!important;}
     margin-top: -6px;
 }*/
 
+.input_search_medio{width: calc(100% - 39px);height: 40px;}
+
+.border_bottom_gris{border-bottom: 1px solid #ececec;}
+
+.div_enlaces_pop_up{    display: none;
+    display: none;
+    position: absolute;
+    background: white;
+    border: solid;
+    width: 100%;
+    list-style-type: none;
+    border-width: 1px;
+    border-color: #ececec;
+    padding: 0px 15px;
+    padding-top: 4px;
+    margin-left: -7px;
+    position: absolute;
+    z-index: 2;
+}
+.pop_up li{
+    padding-top: 3px;
+    padding-bottom: 3px;
+    font-family: gotham, helvetica, arial, sans-serif;
+    font-size: 12px;
+    cursor: pointer;
+    color: #878787;
+    overflow: hidden;
+    /* overflow-wrap: break-word; */
+    text-overflow: ellipsis;
+    white-space: nowrap;
+
+}
+.pop_up li:hover{color:#4688F1}
 
 .visible{display: block!important;-webkit-animation: fadeIn 1s;
     animation: fadeIn 1s;}
